--- a/index.htm
+++ b/index.htm
@@ -221,6 +221,11 @@
                         <td>文件上傳_filedetail</td>
                         <td><a href="文件上傳_filedetail.htm"></a></td>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td>404</td>
+                        <td><a href="404.htm"></a></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
