--- a/index.htm
+++ b/index.htm
@@ -101,7 +101,7 @@
         <h1><img src="images/logo.svg" alt="">
             <span>網路申辦服務<em>教育活動個人報名</em></span></h1>
         <div class="btn_grp">
-            <a href="#" class="btn">切版檔案請按此下載</a>
+            <a href="https://github.com/HywebU00/2020_nmns_bidservices" class="btn">切版檔案請按此下載</a>
         </div>
         <hr>
         <div class="table_wrapper">
