--- a/我要繳費_paychoice.htm
+++ b/我要繳費_paychoice.htm
@@ -159,8 +159,8 @@
                         <div class="content">
                             <p>您所選擇的繳費方式為ATM轉帳，確定後就不能再重新選擇其他繳費方式囉!</p>
                             <div class="btn_grp">
-                                <button class="btn btn-green">確定</button>
-                                <button class="btn btn-green">重新選擇</button>
+                                <button class="btn btn-green" type="submit">確定</button>
+                                <button class="btn btn-green" type="reset">重新選擇</button>
                             </div>
                         </div>
                     </div>
