--- a/我要繳費_paydetail_ATM.htm
+++ b/我要繳費_paydetail_ATM.htm
@@ -176,8 +176,8 @@
                                     </div>
                                 </div>
                                 <div class="btn_grp">
-                                    <button class="btn btn-green">送出</button>
-                                    <button class="btn btn-green">重填</button>
+                                    <button class="btn btn-green" type="submit">送出</button>
+                                    <button class="btn btn-green" type="reset">重填</button>
                                     <button class="btn btn-green cancel">取消</button>
                                 </div>
                             </form>
