--- a/我要繳費_paylist.htm
+++ b/我要繳費_paylist.htm
@@ -156,8 +156,8 @@
 
                                 <p>若尚未確定要繳費，請先不要選繳費方式，一旦選繳費方式後即無法報名截止前取消報名。</p>
                                 <div class="btn_grp">
-                                    <button class="btn btn-green">確定</button>
-                                    <button class="btn btn-green">重新選擇</button>
+                                    <button class="btn btn-green" type="submit">確定</button>
+                                    <button class="btn btn-green" type="reset">重新選擇</button>
                                 </div>
                             </div>
                         </div>
