--- a/活動宣傳看板.htm
+++ b/活動宣傳看板.htm
@@ -50,8 +50,8 @@
                 </div>
                 <!-- navigation End -->
                 <h1>
-                    <a href="index.htm"><img src="images/logo.svg" alt="國立自然科學博物館" /></a>
-                    <span>網路申辦服務<em>教育活動個人報名</em></span>
+                    <a href="index.htm"><img src="images/logo.svg" alt="國立自然科學博物館" /><span>網路申辦服務<em>教育活動個人報名</em></span>
+                    </a>
                 </h1>
                 <!-- 會員專區 -->
                 <div class="member_block">
