--- a/print.htm
+++ b/print.htm
@@ -20,7 +20,7 @@
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Noto+Serif+TC:500&display=swap" rel="stylesheet">
-    
+     <link href="css/print.css" rel="stylesheet" media="all" type="text/css" />
 </head>
 
 <body>
