--- a/index.htm
+++ b/index.htm
@@ -226,6 +226,11 @@
                         <td>404</td>
                         <td><a href="404.htm"></a></td>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td>列印頁面</td>
+                        <td><a href="print.htm"></a></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
