20200305 熱門活動修改css

--- a/mp.htm
+++ b/mp.htm
@@ -117,13 +117,13 @@
                                         <div class="activity_block">
                                             <a href="javascript:;">
                                                 <div class="image">
-                                                    <div><span>地質(地震)<br /> 2019/11/16(六)10:00~12:00</span></div><img src="images/popular_activities_pic01.jpg">
+                                                    <div><span>地質(地震)<br /> 2019/11/16(六)10:00~12:00</span></div><img src="images/popular_activities_pic11.png">
                                                 </div>
                                                 <h3>繪車籠埔斷層線～實地解謎台中篇繪車籠埔斷層線～實地解謎台中篇繪車籠埔斷層線～實地解謎台中篇</h3>
                                                 <div class="content">
                                                     <p>11/20開放報名</p>
                                                     <div class="time">活動開始時間：2019/11/13(三)</div>
-                                                    <div class="object"><span>小二</span><span>小三</span><span>小四</span><span>小五</span><em>還有2個</em></div>
+                                                    <div class="object"><span>社會大眾</span><span>小三以上</span><span>小四以上</span><span>小五</span><em>還有2個</em></div>
                                                 </div>
                                             </a>
                                         </div>
@@ -253,7 +253,7 @@
                                         <div class="activity_block">
                                             <a href="javascript:;">
                                                 <div class="image">
-                                                    <div><span>地質(地震)<br /> 2019/11/16(六)10:00~12:00</span></div><img src="images/popular_activities_pic01.jpg">
+                                                    <div><span>地質(地震)<br /> 2019/11/16(六)10:00~12:00</span></div><img src="images/popular_activities_pic11.png">
                                                 </div>
                                                 <h3>繪車籠埔斷層線～實地解謎台中篇繪車籠埔斷層線～實地解謎台中篇繪車籠埔斷層線～實地解謎台中篇</h3>
                                                 <div class="content">
@@ -268,7 +268,7 @@
                                         <div class="activity_block">
                                             <a href="javascript:;">
                                                 <div class="image">
-                                                    <div><span>植物園蕾絲蕨<br /> 2019/11/16(六)10:00~12:00</span></div><img src="images/popular_activities_pic02.jpg">
+                                                    <div><span>植物園蕾絲蕨<br /> 2019/11/16(六)10:00~12:00</span></div><img src="images/popular_activities_pic12.png">
                                                 </div>
                                                 <h3>植物園「厥色美景-金玉滿堂熱膠封存法」</h3>
                                                 <div class="content">
