20200305熱門活動修改css2

--- a/mp.htm
+++ b/mp.htm
@@ -138,7 +138,7 @@
                                                 <div class="content">
                                                     <p>11/20開放報名--說鯨豚畫鯨豚</p>
                                                     <div class="time">活動開始時間：2019/11/16(六)</div>
-                                                    <div class="object"><span>小二</span><span>小三</span><span>社會大眾</span><span>小五</span></div>
+                                                    <div class="object"><span>小二</span><span>小三</span></span><span>小四</span><span>社會大眾</span><span>小五</span><em>還有2個</em></div>
                                                 </div>
                                             </a>
                                         </div>
