20200318 新增分頁html 及 燈箱重新選擇增加css關閉

--- a/活動宣傳看板.htm
+++ b/活動宣傳看板.htm
@@ -118,29 +118,46 @@
                             <li>
                                 <a href="#">
                                     <span class="num">2</span> 生物礁特展 系列專題演講 生物礁特展 系列專題演講生物礁特展 系列專題演講生物礁</a>
-                                    <span class="dept">科博館</span>
+                                <span class="dept">科博館</span>
                                 <time>2011/11/14</time>
                             </li>
                             <li>
                                 <a href="#">
                                     <span class="num">3</span> 週三及假日動手做(1-3月)</a>
-                                    <span class="dept">科博館</span>
+                                <span class="dept">科博館</span>
                                 <time>2011/11/14</time>
                             </li>
                             <li>
                                 <a href="#">
                                     <span class="num">4</span> 109年度第一季天文台夜間開放</a>
-                                    <span class="dept">科博館</span>
+                                <span class="dept">科博館</span>
                                 <time>2011/11/14</time>
                             </li>
                             <li>
                                 <a href="#">
                                     <span class="num">5</span> 「蕨色美景」系列活動</a>
-                                    <span class="dept">科博館</span>
+                                <span class="dept">科博館</span>
                                 <time>2011/11/14</time>
                             </li>
                         </ul>
                     </div>
+                    <!-- 分頁start -->
+                    <div class="pagination">
+                        <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，</div>
+                        <div class="items">每頁顯示 <a href="#">20</a> <a href="#">40</a> <a href="#">60</a> 筆 </div>
+                        <ul class="page">
+                            <li class="first"><a href="#" title="第一頁">第一頁</a></li>
+                            <li class="prev"><a href="#" title="回上一頁">回上一頁 </a></li>
+                            <li class="active"><a href="#">1</a></li>
+                            <li class="xs_hidden"><a href="#">2</a></li>
+                            <li class="xs_hidden"><a href="#">3</a></li>
+                            <li class="xs_hidden"><a href="#">4</a></li>
+                            <li class="xs_hidden"><a href="#">5</a></li>
+                            <li class="next"><a href="#" title="下一頁">下一頁</a></li>
+                            <li class="last"><a href="#" title="最後一頁">最後一頁</a></li>
+                        </ul>
+                    </div>
+                    <!-- 分頁end -->
                 </section>
                 <!-- LP End -->
             </div>
