20200423 調整區塊設計

--- a/print.htm
+++ b/print.htm
@@ -19,8 +19,8 @@
     <link rel="stylesheet" type="text/css" href="vendor/gridloading/css/component.css" />
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Noto+Serif+TC:500&display=swap" rel="stylesheet">
-     <link href="css/print.css" rel="stylesheet" media="all" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500;700;900&family=Open+Sans:wght@600;800&display=swap" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet" media="all" type="text/css" />
 </head>
 
 <body>
@@ -51,7 +51,7 @@
                 </div>
                 <!-- navigation End -->
                 <h1>
-                    <a href="index.htm"><img src="images/logo.svg" alt="國立自然科學博物館" /><span>網路申辦服務<em>教育活動個人報名</em></span>
+                    <a href="index.htm"><img src="images/logo.svg" alt="國立自然科學博物館" /><span>教育活動個人報名</span>
                     </a>
                 </h1>
                 <!-- 會員專區 -->
