2020 首頁熱門活動英文字刪除

--- a/會員登入後首頁.htm
+++ b/會員登入後首頁.htm
@@ -116,7 +116,7 @@
                 <div class="container">
                     <div class="col">
                         <div class="popular_activities">
-                            <h2>熱門活動<span>POPULAR ACTIVITIES</span></h2>
+                            <h2>熱門活動<!-- <span>POPULAR ACTIVITIES</span> --></h2>
                             <div class="contentblock">
                                 <ul class="grid effect-2" id="grid">
                                     <li>
