--- a/mp.htm
+++ b/mp.htm
@@ -401,7 +401,7 @@
                             <div class="content">
                                 <ul>
                                     <li><a href="javascript:;"><span><img src="images/activity_query_pic01.png">活動梯次</span></a></li>
-                                    <li><a href="javascript:;"><span><img src="images/activity_query_pic02.png">日期檢視</span></a></li>
+                                    <li><a href="javascript:;"><span><img src="images/activity_query_pic02.png">日曆檢視</span></a></li>
                                 </ul>
                             </div>
                         </div>
